--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "viem": "^2.21.54",
-    "wagmi": "^2.13.5"
+    "wagmi": "^2.13.5",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
@@ -56,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.5.13",
     "postcss": "^8",
     "supabase": "^2.0.0",
     "tailwindcss": "^3.4.1",
