--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.47.3",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.62.3",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/blob": "^0.27.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
