--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.14.0",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
+    "@heroui/react": "^2.7.2",
+    "@heroui/theme": "^2.4.9",
     "@nextui-org/react": "^2.6.8",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -28,6 +30,7 @@
     "@vercel/blob": "^0.27.0",
     "@wagmi/core": "^2.16.4",
     "axios": "^1.7.9",
+    "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
