--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/blob": "^0.27.0",
     "@wagmi/core": "^2.16.4",
+    "arweave": "^1.15.5",
     "axios": "^1.7.9",
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
