--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@react-stately/data": "^3.12.0",
+    "@reown/walletkit": "^1.2.1",
     "@supabase/supabase-js": "^2.47.3",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.62.3",
