test: bincance wallet provider

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@binance/w3w-ethereum-provider": "1.1.8-alpha.0",
+    "@binance/w3w-rainbow-connector-v2": "^1.0.2",
+    "@binance/w3w-utils": "^1.1.6",
     "@emotion/styled": "^11.14.0",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
